--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fullstack-recipe-with-variations",
+	"name": "amplify-ses",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@aws-amplify/ui-react": "^6.3.1",
+		"@aws-sdk/client-sesv2": "^3.650.0",
 		"aws-amplify": "^6.6.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
